Dodanie nowych plików i szablonu HTML

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,16 +12,11 @@
     <h4>Wszelkie prawa zastrzeżone</h4>
 </div>
 <div>
-    <p>To jest akapit</p>
-    <em>To jest wyrózniony tekst </em><br>
-    <strong>Tu jest pogrubiony tekst</strong><br>
-    <a href="https:strefakursów.pl">aaa</a><br>
+   {{ posts }}
 </div>
 <div>
 <ul>
-    <li>Elementy listy</li>
-    <li>Elementy listy</li>
-    <li>Elementy listy</li>
+
 </div>
 </ul>
 </body>
