poprawa błedów wszystko dziłą doskonale

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -18,7 +18,7 @@
 <div>
     <p>opublikowany: {{ post.published_date }}</p>
     <><a href="">{{ post.title }}</a></h2>
-    <em>{{ postt.text|linebreakbr }}</em>
+    <em>{{ postt.text|linebreaksbr }}</em>
 </div>
 </div>
 {% endfor %}
