--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,28 +1,14 @@
-<!DOCTYPE html>
-<html lang="pl" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog dla programistów</title>
-</head>
-<body>
-<div></div>
-    <h1>Witam na stronie bloga!</h1>
-    <h2>Blog o programowaniu</h2>
-    <h3>Autor: Mateusz</h3>
-    <h4>Wszelkie prawa zastrzeżone</h4>
-</div>
-    {% comment %}
-    <p> hdbiudabfiaubfia</p>
-    {% endcomment %}
-    {% for post in posts %}
-<div>
-    <p>opublikowany: {{ post.published_date }}</p>
-    <><a href="">{{ post.title }}</a></h2>
-    <em>{{ postt.text|linebreaksbr }}</em>
-</div>
-</div>
-{% endfor %}
-<div>
+{% extends 'blog/base.html' %}
 
-</body>
-</html>
+    {% block content %}
+        {% for post in posts %}
+        <div class="post">
+            <img src="{{ post.image.url }}" class="img" alt="Obrazek" width="40%"><br>
+            <div class="data">
+            <p>opublikowany: {{ post.published_date }}</p>
+            </div><h2><b><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></b></h2>
+        <br/>
+            <em>{{ post.text|linebreaksbr }}</em><br/>
+        </div>
+        {% endfor %}
+    {% endblock %}
