--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,6 +7,7 @@
             {{ post.publish_date }}
         </div>
         {% endif %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pl %}"><span class="glyphicon glyphicon-pencil"></span></a>
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linesbreaksbr}}</p>
     </div>
