--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,14 +1,18 @@
 {% extends 'blog/base.html' %}
 
 {% block content %
-    <div class="post">
+    <div class="post" xmlns="http://www.w3.org/1999/xhtml">
         {% if post.publish_date %}
         <div class="date">
             {{ post.publish_date }}
         </div>
         {% endif %}
+        {% if_user.is_authenticated%}
         <a class="btn btn-default" href="{% url 'post_edit' pk=post.pl %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <h2>{{ post.title }}</h2>
+        <img class="img" src="{{ post.image.url }}" alt="Obrazek" width="300">
         <p>{{ post.text|linesbreaksbr}}</p>
+        <br /><br />
     </div>
 {% endblock %}
